--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -14,88 +14,80 @@ Brought to you by Krom and Lewin</font></P><hr>
 <a href="#Known_bugs">Known bugs</a><br>
 <a href="#Feedback">Feedback</a><br>
 <a href="#Credits">Credits</a></font></p><hr>
-<P><B><FONT size="+1" face="Calibri"><a name="Description">Description</a></FONT></B></P>
-<p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to recreate original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game. 
-This is the first demo featuring economy part of the game.<br>
+<P><B><FONT size="+2" face="Calibri"><a name="Description">Description</a></FONT></B></P>
+<p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to recreate original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game.
+This is the first demo featuring the economy part of the game.<br>
 You wake up in a medieval age in a land ruled by a king. Your goal is to build 
 your own kingdom. You don't have direct control for it's not a leaders job to 
 sort out such small matters. You control really important things: economy, 
 building and later on - army.<br>
-KaM Remake is freeware<span style="background-color: #FF0000">(?)</span> and is 
-built by enthusiasts. Used technology: Delphi6, OpenGL, OpenAL, zLib,
-<span style="background-color: #FF0000">what else?</span></font></p>
-<P><B><FONT size="+1" face="Calibri"><a name="System_Requirements">System Requirements</a></FONT></B></P>
+KaM Remake is freeware<span style="background-color: #FF0000">(?) Suits me. Opensource is another option, but we can't call it that while the source is closed during development. Freeware is good enough for now. To be deleted</span> and is 
+built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib,
+<span style="background-color: #FF0000">what else? Nothing else important. Icon studio? Hardly worth mentioning. To be deleted</span></font></p>
+<P><B><FONT size="+2" face="Calibri"><a name="System_Requirements">System Requirements</a></FONT></B></P>
 <p><font face="Calibri">Windows 98, XP or Vista, a 500MHz or faster processor, 256MB or more of RAM, a 3D graphics accelerator OpenGL 1.4 compliant. 
 </font></p>
-<P><B><FONT size="+1" face="Calibri"><a name="Installing">Installing</a></FONT></B></P>
+<P><B><FONT size="+2" face="Calibri"><a name="Installing">Installing</a></FONT></B></P>
 <p><font face="Calibri">Run <b>setup.exe</b> and follow the installation 
 instructions.<br>
 Package also includes OpenAL audio drivers (<b>oalinst.exe</b>). 
 You might need to install them to play the KaM Remake. <br>
 KaM Remake uses OpenGL rendering engine, so you need to have OpenGL drivers 
 installed as well. Visit your graphics card manufacturer site to get the latest 
-drivers available.<br>LLaunch the game either from desktop shortcut or KaM_Remake.exe from installation 
+drivers available.<br>Launch the game either from desktop shortcut or KaM_Remake.exe in the installation 
 folder.<BR>&nbsp;</font></p>
-<p><B><FONT size="+1" face="Calibri"><a name="Gameplay">Gameplay</a></FONT></B></p>
+<p><B><FONT size="+2" face="Calibri"><a name="Gameplay">Gameplay</a></FONT></B></p>
 <p>
-<font face="Calibri">Following shortcuts are available:<br>
+<font face="Calibri"><B>The following shortcuts are available:</B><br>
 <b>F8</b> speeds up the game pace<br>
-<b>F11 </b>will show up debug panel and menu<br>
+<b>F11 </b>will show up debugging panel and menu<br>
 <b>P</b> pauses the game<br>
-<b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will scroll the view in game</font></p>
-<p><font face="Calibri">Installing add on maps:<br>
-Create a sub-folder in Maps folder of KaM Remake, name it i.e. &quot;My New Map&quot;.<br>
-Put inside .dat and .map files of the map and name them accordingly &quot;My New 
-Map.dat&quot; and &quot;My New Map.map&quot;.<br>
-File names should exactly match folder name.</font></p>
-<p><font face="Calibri">Sketch: <BR>How to use menu, start maps, etc.
-<span style="background-color: #FF0000">//These should be obvious already ;-)</span><BR>
-&nbsp;</font></p>
-<P><B><FONT size="+1" face="Calibri"><a name="F_A_Q_">F.A.Q.</a></FONT></B></P>
+<b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will scroll the view in game<br>
+<b>Middle mouse click</b> will place a scout at the cursor to allow you to explore<br></font></p>
+<p><font face="Calibri"><B>Installing addon maps:</B><br>
+<B>1.</B> Create a sub-folder in Maps folder of KaM Remake, name it i.e. &quot;My New Map&quot;.<br>
+<B>2.</B> Put inside .dat and .map files of the map and name them accordingly &quot;My New 
+<B>3.</B> Map.dat&quot; and &quot;My New Map.map&quot;.<br>
+<B>4.</B> You can also make a file called&quot;My New Map.txt&quot; which will contain the description and other information. Use the same format as in the missions provided. No offical format information will be released because this file will probably be changed later on. <span style="background-color: #FF0000">(? or will we just remove the txt file for the demo?)</span><br>
+<B>5.</B> File names should exactly match folder name.</font></p>
+<P><B><FONT size="+2" face="Calibri"><a name="F_A_Q_">F.A.Q.</a></FONT></B></P>
 <P>
-<font face="Calibri">Silent crashes:<br>
+<font face="Calibri"><B>Silent crashes:</B><br>
 KaM Remake silently crashes on loading or music track change if there are any 
 problems with sound system. Try installing latest OpenAL drivers. If that 
-doesn't help - remove &quot;Music&quot; folder from KaM Remake.<br>
-Low framerate:<br>
-If you have ridiculously low framerate this could mean your OpenGL drivers are 
+doesn't help - remove &quot;Music&quot; folder from KaM Remake.<br></p>
+<p><B>Low framerate:</B><br>If you have ridiculously low framerate this could mean your OpenGL drivers are 
 out of date. See OpenGL version info in main menu top-left corner. It should be 
 at least 1.4.x. If it's any less you need to update your graphics card drivers 
-(check card manufacturers website for that matter).<br>
-Assertion failed:<br>
-Sometimes when something unexpectedly happen you will get a &quot;Assertion failed&quot; 
+(check card manufacturers website for that matter).<br></p>
+<p><B>Assertion failed:</B><br>Sometimes when something unexpectedly happen you will get a &quot;Assertion failed&quot; 
 message. In this case you should terminate KaM_Remake from Task Manager (press 
 Ctrl+Alt+Del, choose KaM Remake and press End Task button). Browse to KaM Remake 
 folder and find KaM.log file containing details of the crash. Please send this 
-file by email either to Krom <a href="mailto:(kromster80@gmail.com">
-(kromster80@gmail.com</a>) or Lewin (<span style="background-color: #FF0000">your 
-email</span>).</font><br>
+file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) along with details of what you did to make it crash and any other information that might be of use.</font><br>
 &nbsp;</P>
-<P><B><FONT size="+1" face="Calibri"><a name="Known_bugs">Known bugs</a> and 
+<P><B><FONT size="+2" face="Calibri"><a name="Known_bugs">Known bugs</a> and 
 limitations</FONT></B></P>
 <p><font face="Calibri">Main menu has fixed 1024x768 size irregardless of window 
 size or fullscreen.<br>
-Only single-player maps are supported (ones with ct_human_player line).<br>
+Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
 Units will go through one another.<br>
 Fisherman won't go for fish.<br>
-Unit training in Barracks nor Town Hall isn't functioning.<br>
+Unit training in Barracks and Town Hall isn't functioning.<br>
 Citizens won't go to eat if they are standing off the road.<br>
 &nbsp;</font></p>
-<p><B><FONT size="+1" face="Calibri"><a name="Feedback">Feedback</a></FONT></B></p>
+<p><B><FONT size="+2" face="Calibri"><a name="Feedback">Feedback</a></FONT></B></p>
 <font face="Calibri">Please use <A href="http://www.atfreeforum.com/knights/viewtopic.php?t=233&mforum=knights">the forum</A> to give 
 us feedback. Most of the bugs are probably known, but we would love your feedback, suggestions, complements, etc.
 <br>
 Whenever you can offer some help in Delphi coding (ai, net), menu design, ideas 
 for improvements - please write in the forum.
   </font>
-  <P><B><FONT size="+1" face="Calibri"><a name="Credits">Credits</a></FONT></B></P>
+  <P><B><FONT size="+2" face="Calibri"><a name="Credits">Credits</a></FONT></B></P>
   <font face="Calibri">Lead programmer - Krom<br>
 Programmer - Lewin<br>
 Thanks to Alex who introduced core design back in 2008<br>
-Huge thanks to KaM community and its active members (Free_sms_kam, Harold, JBSNorro, 
-The_Knight, Litude, Merchator, Real Hotdog<span style="background-color: #FF0000"> 
-(old Litudes nik, right?)</span> and many <span style="background-color: #FF0000">
-others</span>) who helped us with decoding, advice, ideas<span style="background-color: #FF0000">, 
-etc..</span></font>
+Huge thanks to KaM community and its active members (Free_sms_kam, Harold, JBSnorro, 
+The Knight, Litude, Merchator, Thunderwolf, Nick, Litude (Real Hotdog) and many others) who helped us with decoding, advice, ideas and encouragement.</font>
   </BODY>
 </HTML>
