--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -5,16 +5,14 @@
 	<BODY>
 <P align="center"><font face="Calibri"><FONT size="+3">Knights and Merchants Remake Demo</FONT><BR>
 Brought to you by Krom and Lewin</font></P><hr>
-<p align="center"><font face="Calibri">Contents:<br>
-<a href="#Description">Description</a><br>
-<a href="#System_Requirements">System requirements</a><br>
-<a href="#Installing">Installing</a><br>
-<a href="#Gameplay">Gameplay</a><br>
-<a href="#F_A_Q_">F.A.Q.</a><br>
-<a href="#Known_bugs">Known bugs</a><br>
-<a href="#Feedback">Feedback</a><br>
-<a href="#Credits">Credits</a></font></p><hr>
-<P><B><FONT size="+2" face="Calibri"><a name="Description">Description</a></FONT></B></P>
+<p align="center"><font face="Calibri">Contents: <br>
+<a href="#Description">Description</a> · <a href="#System_Requirements">System requirements</a> 
+· <a href="#Installing">Installing</a> · <a href="#Gameplay">Gameplay</a> ·
+<a href="#F_A_Q_">F.A.Q.</a> · <a href="#Known_bugs">Known bugs</a> ·
+<a href="#Feedback">Feedback</a> · <a href="#Credits">Credits</a></font></p><hr>
+<blockquote>
+	<P><B><FONT size="+2" face="Calibri"><a name="Description">Description</a></FONT></B></P>
+</blockquote>
 <p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to recreate original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game.
 This is the first demo featuring the economy part of the game.<br>
 You wake up in a medieval age in a land ruled by a king. Your goal is to build 
@@ -24,10 +22,14 @@ building and later on - army.<br>
 KaM Remake is freeware<span style="background-color: #FF0000">(?) Suits me. Opensource is another option, but we can't call it that while the source is closed during development. Freeware is good enough for now. To be deleted</span> and is 
 built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib,
 <span style="background-color: #FF0000">what else? Nothing else important. Icon studio? Hardly worth mentioning. To be deleted</span></font></p>
-<P><B><FONT size="+2" face="Calibri"><a name="System_Requirements">System Requirements</a></FONT></B></P>
+<blockquote>
+	<P><B><FONT size="+2" face="Calibri"><a name="System_Requirements">System Requirements</a></FONT></B></P>
+</blockquote>
 <p><font face="Calibri">Windows 98, XP or Vista, a 500MHz or faster processor, 256MB or more of RAM, a 3D graphics accelerator OpenGL 1.4 compliant. 
 </font></p>
-<P><B><FONT size="+2" face="Calibri"><a name="Installing">Installing</a></FONT></B></P>
+<blockquote>
+	<P><B><FONT size="+2" face="Calibri"><a name="Installing">Installing</a></FONT></B></P>
+</blockquote>
 <p><font face="Calibri">Run <b>setup.exe</b> and follow the installation 
 instructions.<br>
 Package also includes OpenAL audio drivers (<b>oalinst.exe</b>). 
@@ -36,7 +38,9 @@ KaM Remake uses OpenGL rendering engine, so you need to have OpenGL drivers
 installed as well. Visit your graphics card manufacturer site to get the latest 
 drivers available.<br>Launch the game either from desktop shortcut or KaM_Remake.exe in the installation 
 folder.<BR>&nbsp;</font></p>
-<p><B><FONT size="+2" face="Calibri"><a name="Gameplay">Gameplay</a></FONT></B></p>
+<blockquote>
+	<p><B><FONT size="+2" face="Calibri"><a name="Gameplay">Gameplay</a></FONT></B></p>
+</blockquote>
 <p>
 <font face="Calibri"><B>The following shortcuts are available:</B><br>
 <b>F8</b> speeds up the game pace<br>
@@ -50,7 +54,9 @@ folder.<BR>&nbsp;</font></p>
 <B>3.</B> Map.dat&quot; and &quot;My New Map.map&quot;.<br>
 <B>4.</B> You can also make a file called&quot;My New Map.txt&quot; which will contain the description and other information. Use the same format as in the missions provided. No offical format information will be released because this file will probably be changed later on. <span style="background-color: #FF0000">(? or will we just remove the txt file for the demo?)</span><br>
 <B>5.</B> File names should exactly match folder name.</font></p>
-<P><B><FONT size="+2" face="Calibri"><a name="F_A_Q_">F.A.Q.</a></FONT></B></P>
+<blockquote>
+	<P><B><FONT size="+2" face="Calibri"><a name="F_A_Q_">F.A.Q.</a></FONT></B></P>
+</blockquote>
 <P>
 <font face="Calibri"><B>Silent crashes:</B><br>
 KaM Remake silently crashes on loading or music track change if there are any 
@@ -66,8 +72,10 @@ Ctrl+Alt+Del, choose KaM Remake and press End Task button). Browse to KaM Remake
 folder and find KaM.log file containing details of the crash. Please send this 
 file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) along with details of what you did to make it crash and any other information that might be of use.</font><br>
 &nbsp;</P>
-<P><B><FONT size="+2" face="Calibri"><a name="Known_bugs">Known bugs</a> and 
+<blockquote>
+	<P><B><FONT size="+2" face="Calibri"><a name="Known_bugs">Known bugs</a> and 
 limitations</FONT></B></P>
+</blockquote>
 <p><font face="Calibri">Main menu has fixed 1024x768 size irregardless of window 
 size or fullscreen.<br>
 Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
@@ -76,14 +84,18 @@ Fisherman won't go for fish.<br>
 Unit training in Barracks and Town Hall isn't functioning.<br>
 Citizens won't go to eat if they are standing off the road.<br>
 &nbsp;</font></p>
-<p><B><FONT size="+2" face="Calibri"><a name="Feedback">Feedback</a></FONT></B></p>
+<blockquote>
+	<p><B><FONT size="+2" face="Calibri"><a name="Feedback">Feedback</a></FONT></B></p>
+</blockquote>
 <font face="Calibri">Please use <A href="http://www.atfreeforum.com/knights/viewtopic.php?t=233&mforum=knights">the forum</A> to give 
 us feedback. Most of the bugs are probably known, but we would love your feedback, suggestions, complements, etc.
 <br>
 Whenever you can offer some help in Delphi coding (ai, net), menu design, ideas 
 for improvements - please write in the forum.
   </font>
-  <P><B><FONT size="+2" face="Calibri"><a name="Credits">Credits</a></FONT></B></P>
+  <blockquote>
+	<P><B><FONT size="+2" face="Calibri"><a name="Credits">Credits</a></FONT></B></P>
+</blockquote>
   <font face="Calibri">Lead programmer - Krom<br>
 Programmer - Lewin<br>
 Thanks to Alex who introduced core design back in 2008<br>
