--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -6,12 +6,18 @@
 <P align="center"><font face="Calibri"><FONT size="+3">Knights and Merchants Remake Demo</FONT><BR>
 Brought to you by Krom and Lewin</font></P><hr>
 <p align="center"><font face="Calibri">Contents: <br>
-<a href="#Description">Description</a> · <a href="#System_Requirements">System requirements</a> 
-· <a href="#Installing">Installing</a> · <a href="#Gameplay">Gameplay</a> ·
-<a href="#F_A_Q_">F.A.Q.</a> · <a href="#Known_bugs">Known bugs</a> ·
-<a href="#Feedback">Feedback</a> · <a href="#Credits">Credits</a></font></p><hr>
+<a href="#Description">Description</a> · <a href="#System_Requirements">System requirements</a> · <a href="#Installing">Installing</a> 
+· <a href="#Gameplay">Gameplay</a> · <a href="#F_A_Q_">F.A.Q.</a> ·
+<a href="#Known_bugs">Known bugs</a> · <a href="#Feedback">Feedback</a> ·
+<a href="#Credits">Credits</a></font></p><hr>
 <blockquote>
-	<P><B><FONT size="+2" face="Calibri"><a name="Description">Description</a></FONT></B></P>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Images/GUI_0318.gif" width="18" height="26"></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Description0">Description</a></FONT></B></td>
+		</tr>
+	</table>
 </blockquote>
 <p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to recreate original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game.
 This is the first demo featuring the economy part of the game.<br>
@@ -19,16 +25,27 @@ You wake up in a medieval age in a land ruled by a king. Your goal is to build
 your own kingdom. You don't have direct control for it's not a leaders job to 
 sort out such small matters. You control really important things: economy, 
 building and later on - army.<br>
-KaM Remake is freeware<span style="background-color: #FF0000">(?) Suits me. Opensource is another option, but we can't call it that while the source is closed during development. Freeware is good enough for now. To be deleted</span> and is 
-built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib,
-<span style="background-color: #FF0000">what else? Nothing else important. Icon studio? Hardly worth mentioning. To be deleted</span></font></p>
+KaM Remake is freeware and is 
+built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font></p>
 <blockquote>
-	<P><B><FONT size="+2" face="Calibri"><a name="System_Requirements">System Requirements</a></FONT></B></P>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Images/GUI_0310.gif" width="30" height="30"></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="System_Requirements">System Requirements</a></FONT></B></td>
+		</tr>
+	</table>
 </blockquote>
 <p><font face="Calibri">Windows 98, XP or Vista, a 500MHz or faster processor, 256MB or more of RAM, a 3D graphics accelerator OpenGL 1.4 compliant. 
 </font></p>
 <blockquote>
-	<P><B><FONT size="+2" face="Calibri"><a name="Installing">Installing</a></FONT></B></P>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Images/GUI_0303.gif" width="28" height="27"></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Installing0">Installing</a></FONT></B></td>
+		</tr>
+	</table>
 </blockquote>
 <p><font face="Calibri">Run <b>setup.exe</b> and follow the installation 
 instructions.<br>
@@ -39,7 +56,13 @@ installed as well. Visit your graphics card manufacturer site to get the latest
 drivers available.<br>Launch the game either from desktop shortcut or KaM_Remake.exe in the installation 
 folder.<BR>&nbsp;</font></p>
 <blockquote>
-	<p><B><FONT size="+2" face="Calibri"><a name="Gameplay">Gameplay</a></FONT></B></p>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Images/GUI_0312.gif" width="30" height="20"></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Gameplay0">Gameplay</a></FONT></B></td>
+		</tr>
+	</table>
 </blockquote>
 <p>
 <font face="Calibri"><B>The following shortcuts are available:</B><br>
@@ -52,10 +75,19 @@ folder.<BR>&nbsp;</font></p>
 <B>1.</B> Create a sub-folder in Maps folder of KaM Remake, name it i.e. &quot;My New Map&quot;.<br>
 <B>2.</B> Put inside .dat and .map files of the map and name them accordingly &quot;My New 
 <B>3.</B> Map.dat&quot; and &quot;My New Map.map&quot;.<br>
-<B>4.</B> You can also make a file called&quot;My New Map.txt&quot; which will contain the description and other information. Use the same format as in the missions provided. No offical format information will be released because this file will probably be changed later on. <span style="background-color: #FF0000">(? or will we just remove the txt file for the demo?)</span><br>
+<B>4.</B> You can also make a file called &quot;My New Map.txt&quot; which will contain the 
+mission description and other information. Use the same format as in the missions provided. No official format information will be released because this file will probably be changed later on. <span style="background-color: #FF0000">(? or will we just remove the txt file for the demo?) </span> 
+<span style="background-color: #FFFF00">let's keep it, it does no harm yet. to 
+be deleted</span><br>
 <B>5.</B> File names should exactly match folder name.</font></p>
 <blockquote>
-	<P><B><FONT size="+2" face="Calibri"><a name="F_A_Q_">F.A.Q.</a></FONT></B></P>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Images/GUI_0311.gif" width="26" height="21"></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="F_A_Q_0">F.A.Q.</a></FONT></B></td>
+		</tr>
+	</table>
 </blockquote>
 <P>
 <font face="Calibri"><B>Silent crashes:</B><br>
@@ -73,8 +105,14 @@ folder and find KaM.log file containing details of the crash. Please send this
 file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) along with details of what you did to make it crash and any other information that might be of use.</font><br>
 &nbsp;</P>
 <blockquote>
-	<P><B><FONT size="+2" face="Calibri"><a name="Known_bugs">Known bugs</a> and 
-limitations</FONT></B></P>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Images/GUI_0304.gif" width="29" height="22"></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Known_bugs0">Known bugs and 
+limitations</a></FONT></B></td>
+		</tr>
+	</table>
 </blockquote>
 <p><font face="Calibri">Main menu has fixed 1024x768 size irregardless of window 
 size or fullscreen.<br>
@@ -85,7 +123,13 @@ Unit training in Barracks and Town Hall isn't functioning.<br>
 Citizens won't go to eat if they are standing off the road.<br>
 &nbsp;</font></p>
 <blockquote>
-	<p><B><FONT size="+2" face="Calibri"><a name="Feedback">Feedback</a></FONT></B></p>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Images/GUI_0323.gif" width="30" height="30"></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Feedback0">Feedback</a></FONT></B></td>
+		</tr>
+	</table>
 </blockquote>
 <font face="Calibri">Please use <A href="http://www.atfreeforum.com/knights/viewtopic.php?t=233&mforum=knights">the forum</A> to give 
 us feedback. Most of the bugs are probably known, but we would love your feedback, suggestions, complements, etc.
@@ -94,12 +138,19 @@ Whenever you can offer some help in Delphi coding (ai, net), menu design, ideas
 for improvements - please write in the forum.
   </font>
   <blockquote>
-	<P><B><FONT size="+2" face="Calibri"><a name="Credits">Credits</a></FONT></B></P>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Images/GUI_0314.gif" width="26" height="25"></td>
+			<td><span style="vertical-align: middle"><B>
+			<FONT size="+2" face="Calibri">&nbsp;<a name="Credits">Credits</a></FONT></B></span></td>
+		</tr>
+	</table>
 </blockquote>
   <font face="Calibri">Lead programmer - Krom<br>
 Programmer - Lewin<br>
 Thanks to Alex who introduced core design back in 2008<br>
 Huge thanks to KaM community and its active members (Free_sms_kam, Harold, JBSnorro, 
-The Knight, Litude, Merchator, Thunderwolf, Nick, Litude (Real Hotdog) and many others) who helped us with decoding, advice, ideas and encouragement.</font>
+The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf and many others) who helped us with decoding, advice, ideas and encouragement.</font>
   </BODY>
 </HTML>
