- Update readme and made icon backgrounds transparent  - You can now destroy a house while it is being built without it causing weird issues  - Roads and fields can't be removed once digging has started.  - Changed canCrab so they won't go on roads, markups etc. and added canWolf because wolfs will only walk on soil.  - Cleaned up some stuff and reported a few bugs/issues in code. Please take a look when you have time.  - Fixed some bugs and tweaked some stuff, please let me know if you have any complaints about what I've changed.

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -15,7 +15,7 @@ Brought to you by Krom and Lewin</font></P><hr>
 		<tr>
 			<td>
 	<img border="0" src="Images/GUI_0318.gif" width="18" height="26"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Description0">Description</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Description">Description</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
@@ -43,7 +43,7 @@ built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font></
 		<tr>
 			<td>
 	<img border="0" src="Images/GUI_0303.gif" width="28" height="27"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Installing0">Installing</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Installing">Installing</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
@@ -62,15 +62,15 @@ drivers available.<br>Launch the game - KaM_Remake.exe.<BR>&nbsp;</font></p>
 		<tr>
 			<td>
 	<img border="0" src="Images/GUI_0312.gif" width="30" height="20"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Gameplay0">Gameplay</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Gameplay">Gameplay</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
 <p>
 <font face="Calibri"><B>The following shortcuts are available in game:</B><br>
 <b>F8</b> speeds up the game pace x10 times<br>
-<b>F11 </b>will show up debugging panel and menu<br>
-<b>Mouse wheel</b> scrolling it will zoom in/out the game<b><br>
+<b>F11 </b>will show debugging panel and menu<br>
+<b>Mouse wheel</b> scrolling it will zoom in and out<b><br>
 &#8592; </b>backspace will reset zoom back to default 100%<b><br>
 P</b> pauses the game<br>
 <b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will scroll the view in game<br>
@@ -81,16 +81,13 @@ the map<br></font></p>
 File names should match folder name exactly.<br><B>3.</B> You can also make an 
 optional file called &quot;My New Map.txt&quot; which will contain the 
 mission description and some other information. Use the same format as in the missions provided 
-with Remake. No official format information will be released because this file will probably be changed later on.
-<span style="background-color: #FF0000">(? or will we just remove the txt file for the demo?) 
-</span><span style="background-color: #FFFF00">let's keep it, it does no harm yet. to 
-be deleted</span></font></p>
+with Remake. No official format information will be released because this file will probably be changed later on.</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
 			<img border="0" src="Images/GUI_0311.gif" width="26" height="21"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="F_A_Q_0">F.A.Q.</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="F_A_Q_">F.A.Q.</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
@@ -114,7 +111,7 @@ file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@g
 		<tr>
 			<td>
 	<img border="0" src="Images/GUI_0304.gif" width="29" height="22"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Known_bugs0">Known bugs and 
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Known_bugs">Known bugs and 
 limitations</a></FONT></B></td>
 		</tr>
 	</table>
@@ -132,14 +129,14 @@ Citizens won't go to eat if they are standing off the road.<br>
 		<tr>
 			<td>
 	<img border="0" src="Images/GUI_0323.gif" width="30" height="30"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Feedback0">Feedback</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Feedback">Feedback</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
 <font face="Calibri">Please use <A href="http://www.atfreeforum.com/knights/viewtopic.php?t=233&mforum=knights">the forum</A> to give 
 us feedback. Most of the bugs are probably known, but we would love your feedback, suggestions, complements, etc.
 <br>
-Whenever you can offer some help in Delphi coding (ai, net), menu design, ideas 
+If you can offer some help in Delphi coding (AI, network), menu design, ideas 
 for improvements - please write in the forum as well.
   </font>
   <blockquote>
