- renamed Readme pics folder

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -14,7 +14,7 @@ Brought to you by Krom and Lewin</font></P><hr>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Images/GUI_0318.gif" width="18" height="26"></td>
+	<img border="0" src="Readme/GUI_0318.gif" width="18" height="26"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Description">Description</a></FONT></B></td>
 		</tr>
 	</table>
@@ -31,7 +31,7 @@ built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font></
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Images/GUI_0310.gif" width="30" height="30"></td>
+	<img border="0" src="Readme/GUI_0310.gif" width="30" height="30"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="System_Requirements">System Requirements</a></FONT></B></td>
 		</tr>
 	</table>
@@ -42,7 +42,7 @@ built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font></
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Images/GUI_0303.gif" width="28" height="27"></td>
+	<img border="0" src="Readme/GUI_0303.gif" width="28" height="27"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Installing">Installing</a></FONT></B></td>
 		</tr>
 	</table>
@@ -61,7 +61,7 @@ drivers available.<br>Launch the game - KaM_Remake.exe.<BR>&nbsp;</font></p>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Images/GUI_0312.gif" width="30" height="20"></td>
+	<img border="0" src="Readme/GUI_0312.gif" width="30" height="20"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Gameplay">Gameplay</a></FONT></B></td>
 		</tr>
 	</table>
@@ -86,7 +86,7 @@ with Remake. No official format information will be released because this file w
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-			<img border="0" src="Images/GUI_0311.gif" width="26" height="21"></td>
+			<img border="0" src="Readme/GUI_0311.gif" width="26" height="21"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="F_A_Q_">F.A.Q.</a></FONT></B></td>
 		</tr>
 	</table>
@@ -110,7 +110,7 @@ file by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@g
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Images/GUI_0304.gif" width="29" height="22"></td>
+	<img border="0" src="Readme/GUI_0304.gif" width="29" height="22"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Known_bugs">Known bugs and 
 limitations</a></FONT></B></td>
 		</tr>
@@ -128,7 +128,7 @@ Citizens won't go to eat if they are standing off the road.<br>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Images/GUI_0323.gif" width="30" height="30"></td>
+	<img border="0" src="Readme/GUI_0323.gif" width="30" height="30"></td>
 			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Feedback">Feedback</a></FONT></B></td>
 		</tr>
 	</table>
@@ -143,7 +143,7 @@ for improvements - please write in the forum as well.
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
-	<img border="0" src="Images/GUI_0314.gif" width="26" height="25"></td>
+	<img border="0" src="Readme/GUI_0314.gif" width="26" height="25"></td>
 			<td><span style="vertical-align: middle"><B>
 			<FONT size="+2" face="Calibri">&nbsp;<a name="Credits">Credits</a></FONT></B></span></td>
 		</tr>
