- Updated the readme. Please check asap

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -9,7 +9,8 @@ Brought to you by Krom and Lewin</font></P><hr>
 <a href="#Description">Description</a> · <a href="#System_Requirements">System requirements</a> · <a href="#Installing">Installing</a> 
 · <a href="#Gameplay">Gameplay</a> · <a href="#F_A_Q_">F.A.Q.</a> ·
 <a href="#Known_bugs">Known bugs</a> · <a href="#Feedback">Feedback</a> ·
-<a href="#Credits">Credits</a></font></p><hr>
+<a href="#Credits">Credits</a> ·
+<a href="#Legal">Legal notice</a></font></p><hr>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -19,14 +20,30 @@ Brought to you by Krom and Lewin</font></P><hr>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to recreate original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game.
-This is the first demo featuring the economy part of the game.<br>
-You wake up in a medieval age in a land ruled by a king. Your goal is to build 
+<p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to reinvent original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game.
+This is the first public limited technology preview (demo) featuring the economy part of the game 
+(referred as &quot;mod&quot; or &quot;Remake&quot; further on). Our aim is to demonstrate the 
+potential and get feedback on functionality. All included &quot;assets&quot; borrowed from 
+KaM are there for testing purposes only. Final release will not include any of 
+copyrighted &quot;assets&quot;.<br>
+We assume that you own the original KaM game, in other case you should buy it - 
+it's available in number of online gaming stores.<br>
+KaM Remake executable<span style="background-color: #FFFF00"> (we own only exe 
+file, right?) </span>is freeware and is 
+built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font></p>
+<p><font face="Calibri"><span style="background-color: #FFFF00">I think we can put it as follows: KaM 
+Remake is a mod (sic!) for original KaM TSK/TPR, some kind of alternative exe. This way 
+we rely only on files owned by end user. And as your father noted - this demo is 
+a &quot;limited technology preview&quot; only. Later on we could wrap this in a 
+way that we upload only KaM_Remake.exe and a script to convert all files/paths 
+to Remake format.</span></font></p>
+<p><span style="background-color: #FFFF00"><font face="Calibri">Show the text to 
+your father once again plz. Least of all we need troubles with copyrights.. And 
+I will ask a friend of mine for same matter meanwhile.</font></span></p>
+<p><font face="Calibri">You wake up in a medieval age in a land ruled by a king. Your goal is to build 
 your own kingdom. You don't have direct control for it's not a leaders job to 
 sort out such small matters. You control really important things: economy, 
-building and later on - army.<br>
-KaM Remake is freeware and is 
-built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font></p>
+building and later on - army.</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -36,7 +53,8 @@ built by enthusiasts. Applications used: Delphi6, OpenGL, OpenAL, zLib.</font></
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">Windows 98, XP or Vista, a 500MHz or faster processor, 256MB or more of RAM, a 3D graphics accelerator OpenGL 1.4 compliant. 
+<p><font face="Calibri">KaM Remake requires: Windows 98, XP or Vista, a 500MHz or faster processor, 256MB or more of RAM, a 3D graphics accelerator OpenGL 1.4 compliant, 
+sound card. 
 </font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
@@ -56,7 +74,7 @@ found on official OpenAl page:
 http://connect.creativelabs.com/openal/default.aspx</a> <br>
 KaM Remake uses OpenGL rendering engine, so you need to have OpenGL drivers 
 installed as well. Visit your graphics card manufacturer site to get the latest 
-drivers available.<br>Launch the game - KaM_Remake.exe.<BR>&nbsp;</font></p>
+drivers available.<br>Launch the mod - KaM_Remake.exe.<BR>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -139,7 +157,7 @@ us feedback. Most of the bugs are probably known, but we would love your feedbac
 If you can offer some help in Delphi coding (AI, network), menu design, ideas 
 for improvements - please write in the forum as well.
   </font>
-  <blockquote>
+  &nbsp;<blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
@@ -154,5 +172,26 @@ Programmer - Lewin<br>
 Thanks to Alex who introduced core design back in 2008<br>
 Huge thanks to KaM community and its active members (Free_sms_kam, Harold, JBSnorro, 
 The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf and many others) who helped us with decoding, advice, ideas and encouragement.</font>
+  &nbsp;<blockquote>
+	<table border="0" cellspacing="0" cellpadding="0">
+		<tr>
+			<td>
+	<img border="0" src="Readme/GUI_0314.gif" width="26" height="25"></td>
+			<td><span style="vertical-align: middle"><B>
+			<FONT size="+2" face="Calibri">&nbsp;<a name="Credits0">Legal notice</a></FONT></B></span></td>
+		</tr>
+	</table>
+</blockquote>
+  <font face="Calibri"><span style="background-color: #FFFF00">Add new icon ^ 
+here please! =)<br>
+</span>Commercial use is prohibited.<br>
+Any used names, symbols or other copyrighted stuff is property of their owners.<br>
+We do not take any responsibility in case this mod harms your software or 
+hardware.<br>
+For obvious reasons publishing and/or sharing of this mod in any way is not 
+allowed without this readme file.<br>
+You can upload this mod to your site/server/homepage, but please send us a note.<br>
+We assume that you (end user / player) own license copy of KaM game, in other 
+case you should buy the game before using this mod.</font>
   </BODY>
 </HTML>
