- Tweaked the Readme.html

--- a/Release/Readme.html
+++ b/Release/Readme.html
@@ -3,9 +3,14 @@
 		<TITLE>Readme for KaM Remake</TITLE>
 	</HEAD>
 	<BODY>
-<P align="center"><font face="Calibri"><FONT size="+3">Knights and Merchants Remake Demo</FONT><BR>
+<div align="center">
+<table border="0" width="80%" cellspacing="0" cellpadding="0">
+	<tr>
+		<td>
+<P align="center"><font face="Calibri"><FONT size="+3">Knights and Merchants 
+Remake Demo</FONT><BR>
 Brought to you by Krom and Lewin</font></P><hr>
-<p align="center"><font face="Calibri">Contents: <br>
+<p align="center"><font face="Calibri">Readme contents: <br>
 <a href="#Description">Description</a> · <a href="#System_Requirements">System requirements</a> · <a href="#Installing">Installing</a> 
 · <a href="#Gameplay">Gameplay</a> · <a href="#F_A_Q_">F.A.Q.</a> ·
 <a href="#Known_bugs">Known bugs</a> · <a href="#Feedback">Feedback</a> ·
@@ -53,9 +58,12 @@ building and later on - army.</font></p>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake requires: Windows 98, XP or Vista, a 500MHz or faster processor, 256MB or more of RAM, a 3D graphics accelerator OpenGL 1.4 compliant, 
-sound card. 
-</font></p>
+<p><font face="Calibri">KaM Remake requires: <br>
+&nbsp;&nbsp;&nbsp; Windows 98, XP or Vista; <br>
+&nbsp;&nbsp;&nbsp; 500MHz or faster processor;<br>
+&nbsp;&nbsp;&nbsp; 256MB or more of RAM; <br>
+&nbsp;&nbsp;&nbsp; 3D graphics accelerator OpenGL 1.4 compliant;<br>
+&nbsp;&nbsp;&nbsp; Sound card.</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -100,6 +108,9 @@ File names should match folder name exactly.<br><B>3.</B> You can also make an
 optional file called &quot;My New Map.txt&quot; which will contain the 
 mission description and some other information. Use the same format as in the missions provided 
 with Remake. No official format information will be released because this file will probably be changed later on.</font></p>
+<p><font face="Calibri"><b>Adding custom music:<br>
+1.</b> You can put your mp3 files into Music folder of KaM Remake, they will be 
+included into playlist automatically.</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -167,8 +178,8 @@ for improvements - please write in the forum as well.
 		</tr>
 	</table>
 </blockquote>
-  <font face="Calibri">Lead programmer - Krom<br>
-Programmer - Lewin<br>
+  <font face="Calibri">Lead programmer - Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>)<br>
+Programmer - Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)<br>
 Thanks to Alex who introduced core design back in 2008<br>
 Huge thanks to KaM community and its active members (Free_sms_kam, Harold, JBSnorro, 
 The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf and many others) who helped us with decoding, advice, ideas and encouragement.</font>
@@ -193,5 +204,9 @@ allowed without this readme file.<br>
 You can upload this mod to your site/server/homepage, but please send us a note.<br>
 We assume that you (end user / player) own license copy of KaM game, in other 
 case you should buy the game before using this mod.</font>
+</td>
+	</tr>
+</table>
+  	<p>&nbsp;</div>
   </BODY>
 </HTML>
